--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 HELP.md
 target/
-!.mvn/wrapper/maven-wrapper.jar
+.mvn/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
@@ -18,7 +18,8 @@ target/
 *.iws
 *.iml
 *.ipr
-
+*.cmd
+mvnw
 ### NetBeans ###
 /nbproject/private/
 /nbbuild/
