--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,6 @@ spring.jpa.hibernate.ddl-auto=none
 #swagger
 springdoc.swagger-ui.config-url=/v3/api-docs/swagger-config
 springdoc.swagger-ui.url=/v3/api-docs
+
+#heroku
+java.runtime.version=11
