added for deploy settings

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #SQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/YouDo
-spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.url=jdbc:postgresql://snuffleupagus.db.elephantsql.com:5432/zoisjpzl
+spring.datasource.username=zoisjpzl
+spring.datasource.password=t1l7lorBgtHWluuilEl0pWJHk2POkI4m
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 #liquibase
@@ -18,6 +18,3 @@ spring.jpa.hibernate.ddl-auto=none
 #swagger
 springdoc.swagger-ui.config-url=/v3/api-docs/swagger-config
 springdoc.swagger-ui.url=/v3/api-docs
-
-#heroku
-java.runtime.version=11
