added for deploy settings

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,1 @@
-#SQL
-spring.datasource.url=jdbc:postgresql://snuffleupagus.db.elephantsql.com:5432/zoisjpzl
-spring.datasource.username=zoisjpzl
-spring.datasource.password=t1l7lorBgtHWluuilEl0pWJHk2POkI4m
-spring.datasource.driver-class-name=org.postgresql.Driver
-
-#liquibase
-spring.liquibase.url=${spring.datasource.url}
-spring.liquibase.user=${spring.datasource.username}
-spring.liquibase.password=${spring.datasource.password}
-spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
-
-#jpa
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=none
-
-#swagger
-springdoc.swagger-ui.config-url=/v3/api-docs/swagger-config
-springdoc.swagger-ui.url=/v3/api-docs
+spring.profiles.active=prod
