added avatar uploading

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -18,3 +18,12 @@ spring.jpa.hibernate.ddl-auto=none
 #swagger
 springdoc.swagger-ui.config-url=/v3/api-docs/swagger-config
 springdoc.swagger-ui.url=/v3/api-docs
+
+#MultipartFile
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+#Cloudinary
+cloudinary.cloud-name=ddkxweaw0
+cloudinary.api-key=132132136374712
+cloudinary.api-secret=TxqRFXqAllArZqLS6bWaQ1TO2tc
